Remove NFC setup instructions since tags are already configured

--- a/test.html
+++ b/test.html
@@ -22,7 +22,7 @@
         <button id="startButton" class="start-button">START GAME</button>
         <div style="margin-top: 2rem; text-align: center;">
           <h3>テスト用リンク</h3>
-          <p>NFCタグの代わりに以下のリンクをクリックしてテストできます：</p>
+          <p>NFCタグの設定が完了しているため、以下のリンクでテストできます：</p>
           <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px; margin: 1rem 0; max-width: 300px;">
             <a href="/h/?hid=11" style="padding: 8px; background: rgba(255,255,255,0.2); border-radius: 4px; text-decoration: none; color: white;">11</a>
             <a href="/h/?hid=12" style="padding: 8px; background: rgba(255,255,255,0.2); border-radius: 4px; text-decoration: none; color: white;">12</a>
