--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
   </head>
   <body>
     <div class="game-container">
-      <img src="/public/start-screen.jpg" alt="Battleship Game Start" class="game-image" />
-      <div class="game-overlay">
-        <div class="game-info">
+      <div class="game-content">
+        <div class="game-header">
           <h1>BATTLESHIP NFC GAME</h1>
           <p>4×4グリッドで戦艦を探せ！</p>
+        </div>
+        <div class="game-main">
           <div class="grid-display" id="gridDisplay"></div>
-          <div class="game-status" id="gameStatus"></div>
+          <div class="game-info">
+            <div class="game-status" id="gameStatus"></div>
+          </div>
         </div>
         <button id="startButton" class="start-button">START GAME</button>
       </div>
