Add in-page result modal for better game experience

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
         </div>
         <button id="startButton" class="start-button">START GAME</button>
       </div>
+      
+      <!-- Result Modal -->
+      <div id="resultModal" class="result-modal hidden">
+        <div class="result-content">
+          <div id="resultIcon" class="result-icon">💥</div>
+          <h2 id="resultTitle">HIT!</h2>
+          <p id="resultMessage">戦艦を撃破しました！</p>
+          <button id="continueButton" class="continue-button">続ける</button>
+        </div>
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
