Add debug logs and test button for modal troubleshooting

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           </div>
         </div>
         <button id="startButton" class="start-button">START GAME</button>
+        <button id="testModalButton" class="test-button" style="margin-top: 10px; background: #666; color: white; border: none; padding: 8px 16px; border-radius: 4px;">テストモーダル</button>
       </div>
       
       <!-- Result Modal -->
